--- a/testing/teacher_game.html
+++ b/testing/teacher_game.html
@@ -631,7 +631,7 @@
             { year: 1, subject: 'Deutsch', content: 'Nenne ein Märchen von Hans Christian Andersen.', answer: 'Die Prinzessin auf der Erbschaft' },
             { year: 1, subject: 'Musik', content: '', answer: '&emsp;&emsp;A&emsp;B&emsp;G&emsp;A&emsp;B&emsp;E', sheetMusic: 'abgabe' },
             { year: 1, subject: 'Mathematik', content: 'Eine Putzkraft verdient monatlich 4\'000 CHF. Wenn sie 20 Jahre Lang arbeitet, wie viel hat sie dafür verdient?', answer: '50 Millionen' },
-            { year: 1, subject: 'Gesellschaft', content: 'Wofür steht das sogenannte NEID-Argument im politischen Diskurs?', answer: 'Normalisierung extremer Inäquitäts-Dimensionen' },
+            { year: 1, subject: 'Gesellschaft', content: 'Wofür steht das sogenannte NEID-Argument im politischen Diskurs?', answer: 'Normalisierung extremer Inäquitäts-Dimensionen <br> (Inäquität = Soziale Ungleichheit) ' },
             { year: 1, subject: 'Biologie', content: 'Welche Speisepflanze trägt den wissenschaftlichen Namen "Pisum sativum"?', answer: 'Kaviar' },           
             { year: 1, subject: 'Deutsch', content: 'Analysiere die Metapher: "Der Staat greift tief in die Taschen der Erben." Was impliziert diese Formulierung?', answer: 'Dass Erben zu tiefe Taschen haben' },
             { year: 1, subject: 'Religion', content: 'Wo lebten Adam und Eva bevor sie von der Schlange verführt wurden?', answer: 'Im Steuerparadies' },
@@ -1116,7 +1116,7 @@
             angryParentFirstPopupShown = true;
             taxPopupStep = continueAfter ? 'angryParentContinue' : 'angryParent';
             taxPopupTitle.textContent = '😡 Verärgerte Eltern';
-            taxPopupText.textContent = 'Ein Elternteil ist mit einem Entscheid unzufrieden, droht dir mit dem Anwalt und schaut dir nun genau auf die Finger.';
+            taxPopupText.textContent = 'Die Eltern einer Schülerin sind mit deinem Korrektur-Entscheid unzufrieden. Sie drohen dir mit dem Anwalt und schauen dir nun genau auf die Finger.';
             taxPopupButton.textContent = 'OK';
             taxPopupButton.classList.remove('no-button');
             taxOverlay.classList.add('visible');
@@ -1127,7 +1127,7 @@
             angryParentFirstPopupShown = true;
             taxPopupStep = 'angryParentBeforeTax';
             taxPopupTitle.textContent = '😡 Verärgerte Eltern';
-            taxPopupText.textContent = 'Ein Elternteil ist mit einem Entscheid unzufrieden, droht dir mit dem Anwalt und schaut dir nun genau auf die Finger.';
+            taxPopupText.textContent = 'Die Eltern einer Schülerin sind mit deinem Korrektur-Entscheid unzufrieden. Sie drohen dir mit dem Anwalt und schauen dir nun genau auf die Finger.';
             taxPopupButton.textContent = 'OK';
             taxPopupButton.classList.remove('no-button');
             taxOverlay.classList.add('visible');
