--- a/testing/index.html
+++ b/testing/index.html
@@ -43,7 +43,7 @@
             flex-direction: column;
             align-items: center;
             text-align: center;
-            gap: clamp(16px, 6vh, 24px);
+            gap: 14px;
         }
         .subtle-title {
             font-size: clamp(12px, 4vw, 24px);
@@ -63,7 +63,7 @@
             font-size: clamp(24px, 9vw, 56px);
             margin: 0;
             margin-top: 0.5em;
-            margin-bottom: 0.005em;
+            margin-bottom: 0.4em;
             font-weight: 600;
             letter-spacing: 1px;
             text-shadow: 0 6px 18px rgba(0, 0, 0, 0.6);
